fix text wrap

--- a/app/styles/controls/label.less
+++ b/app/styles/controls/label.less
@@ -5,10 +5,6 @@
   display: block;
 }
 
-.label-control{
-  white-space: nowrap;
-}
-
-.label-control.pl-text-wrapping{
+.pl-text-wrapping{
   white-space: pre-wrap;
 }
